// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "5px",
        "borderBottomRightRadius": "5px",
        "borderTopLeftRadius": "5px",
        "borderTopRightRadius": "5px",
        "paddingBottom": "16px",
        "paddingLeft": "12px",
        "paddingRight": "12px",
        "paddingTop": "16px",
      }
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "fontFamily": "Roboto",
          "fontSize": "24px",
          "fontWeight": "normal",
          "lineHeight": "30px",
          "marginBottom": "8px",
          "marginTop": "8px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "uppercase",
        }
      }
    >
      GoodDollar is a good economy, each day you can collect your part in the economy
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(66,69,74,1.00)",
            "fontFamily": "Roboto",
            "fontSize": "16px",
            "fontWeight": "normal",
            "lineHeight": "22px",
            "textAlign": "center",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        TODAY'S DAILY INCOME 
      </div>
    </div>
  </div>
</div>
`;

exports[`Section matches snapshot with properties 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "5px",
        "borderBottomRightRadius": "5px",
        "borderTopLeftRadius": "5px",
        "borderTopRightRadius": "5px",
        "paddingBottom": "16px",
        "paddingLeft": "12px",
        "paddingRight": "12px",
        "paddingTop": "16px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "WebkitBoxDirection": "normal",
          "WebkitBoxFlex": 1,
          "WebkitBoxOrient": "vertical",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "column",
          "WebkitFlexGrow": 1,
          "WebkitJustifyContent": "space-between",
          "alignItems": "stretch",
          "flexDirection": "column",
          "flexGrow": 1,
          "justifyContent": "space-between",
          "msFlexAlign": "stretch",
          "msFlexDirection": "column",
          "msFlexPack": "justify",
          "msFlexPositive": 1,
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(66,69,74,1.00)",
            "fontFamily": "Roboto",
            "fontSize": "16px",
            "fontWeight": "normal",
            "lineHeight": "22px",
            "textAlign": "center",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        Second text
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "flex-end",
          "WebkitBoxAlign": "end",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "msFlexAlign": "end",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(66,69,74,1.00)",
            "fontFamily": "Roboto",
            "fontSize": "16px",
            "fontWeight": "normal",
            "lineHeight": "22px",
            "textAlign": "center",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        TODAY'S DAILY INCOME 
      </div>
    </div>
  </div>
</div>
`;
